2008-08-13  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Metacity branched for GNOME 2.24.

2008-08-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed help path for bug-buddy. Patch by Leonardo
	Fontenelle. Fixes #547132.

2008-08-06  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: seahorse-plugins added in 2.24 desktop.

2008-08-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: gedit HEAD is not frozen. Added seahorse-plugins
	module.

2008-08-05  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Added Xavier Claessens, empathy's maintainer.
	* gnome-modules.xml.in:
	* releases.xml.in: gnome-vfs and gtksourceview branched for 2.22.
	Empathy is now in the desktop.

2008-08-05  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-backgrounds branched for GNOME 2.22.

2008-08-04  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Romanian leadership changed.
	Khoem Sokhem has an account now.

2008-08-04  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	epiphany-extensions branched for GNOME 2.24.

2008-08-01  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Crimean Tatar team began translation.

2008-08-01  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Track trunk branch of Gimp.

2008-07-31  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: updated Sandeep's id (mr team).

2008-07-31  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Marathi coordinator changed.

2008-07-29  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: devhelp will use gnome-2-22 branch for 2.24.

2008-07-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added doc reference for gnome-commander.

2008-07-25  Gil Forcada  <gforcada@gnome.org>

	* index.py:
	* people.py:
	* dispatcher.py:
	* releases.py