@@ -1484,6 +1484,10 @@
     <branch id="HEAD"/>
   </module>
 
+  <module id="hamster-applet">
+     <branch id="HEAD"/>
+  </module>
+
   <module id="hardware-monitor">
     <branch id="HEAD"/>
   </module>
