@@ -754,6 +754,7 @@
       <module id="gtksourceview"/>
       <module id="gucharmap"/>
       <module id="gvfs"/>
+      <module id="hamster-applet"/>
       <module id="libgnomekbd"/>
       <module id="libgnomeprint"/>
       <module id="libgnomeprintui"/>
