@@ -1,3 +1,9 @@
+2008-08-15  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	Added hamster-applet to desktop set.
+
 2008-08-13  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
